--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   dio: ^4.0.6
   video_player_web_hls: ^0.1.11+4
   video_player: ^2.4.6
+  quiver: ^3.1.0
+  fast_immutable_collections: ^7.4.1
+  dartx: ^1.1.0
+  logger: ^1.1.0
 
 dev_dependencies:
   flutter_test:
